force-app/main/default/objects/RDPriceWiring__c/RDPriceWiring__c.object-meta.xml
<CustomObject>
    <label>RDPriceWiring</label>
    <nameField>
        <label>RDPriceWiring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPriceWirings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>