force-app/main/default/objects/RDPriceWiring__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>