force-app/main/default/objects/RDPriceWiring__c/fields/MinSellComm__c.field-meta.xml
<CustomField>
    <fullName>MinSellComm__c</fullName>
    <label>MinSellComm</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>