force-app/main/default/objects/RDPriceWiring__c/fields/WireLength__c.field-meta.xml
<CustomField>
    <fullName>WireLength__c</fullName>
    <label>WireLength</label>
    <length>50</length>
    <type>Text</type>
</CustomField>