force-app/main/default/objects/RDPriceWiring__c/fields/WireType__c.field-meta.xml
<CustomField>
    <fullName>WireType__c</fullName>
    <label>WireType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>