force-app/main/default/objects/RDPriceWiring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Connection__c</columns>
    <columns>MinSellComm__c</columns>
    <columns>MinSellPrice__c</columns>
    <columns>Price__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>WireLength__c</columns>
    <columns>WireType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>